--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    background-color: rgba(95, 158, 160, 0);
+}
+.ball-inside {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;    
+    border-radius: 50%;
     background-color: cadetblue;
 }
 .column {
@@ -96,6 +105,7 @@ body {
 :root {
     --spring-left: 0;
     --power-x: 0;
+    --power-y: 0;
 }
 
 @keyframes fill {
@@ -118,11 +128,11 @@ body {
 }
 @keyframes fly-ball-x {
     100% {
-        left: var(--power-x,300px);
+        transform: translateX(var(--power-x,300px)); 
     }
 }
 @keyframes fly-ball-y {
     100% {
-        bottom: 0;
+        transform: translateY(var(--power-y,300px));
     }
 }
